<?xml version="1.0"?>
<package format="2">
  <name>ga_slam_visualization</name>
  <version>0.0.0</version>
  <description>The ga_slam_visualization package</description>
  <maintainer email="geromidg@gmail.com">Dimitris Geromichalos</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>grid_map_core</build_export_depend>
  <build_export_depend>grid_map_msgs</build_export_depend>
  <build_export_depend>grid_map_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>grid_map_core</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
</package>
